Updated XML to maDMP Notebook

--- a/XML2maDMP.ipynb
+++ b/XML2maDMP.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,14 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Path to the source XML file\n",
     "SOURCE_XML = \"test-project.xml\"\n",
     "# Path to the target JSON file\n",
-    "TARGET_JSON = \"test-project.json\""
+    "TARGET_JSON = \"test-project.json\"\n",
+    "# XML way of saying 'uri'\n",
+    "XML_URI = \"{http://purl.org/dc/elements/1.1/}uri\"\n",
+    "# Beginning of all attributes we support\n",
+    "ATTR_START = \"https://rdmorganiser.github.io/terms/domain/project\""
    ]
   },
   {
@@ -53,38 +57,441 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "# We now transform the XML file into a Python\n",
-    "# structure which we can then output as JSON\n",
-    "madmp = {}\n",
-    "# general data\n",
-    "madmp['dmp'] = {}\n",
-    "madmp['dmp']['title'] = root.find('title').text\n",
-    "madmp['dmp']['description'] = root.find('description').text\n",
-    "madmp['dmp']['created'] = root.find('created').text\n",
-    "madmp['dmp']['modified'] = root.find('updated').text\n",
-    "madmp['dmp']['project'] = []\n",
-    "madmp['dmp']['contact']"
+    "# structure which can be easier traversed.\n",
+    "# It looks like this:\n",
+    "# rdmo[attribute][set_index][collection_index]\n",
+    "rdmo = {}\n",
+    "rdmo['title'] = root.find('title').text\n",
+    "rdmo['description'] = root.find('description').text\n",
+    "rdmo['created'] = root.find('created').text\n",
+    "max_updated = root.find('updated').text\n",
+    "values = root.find('values')\n",
+    "for value in values.iter('value'):\n",
+    "    index = value.find('set_index').text\n",
+    "    attrib = value.find('attribute').attrib[XML_URI]\n",
+    "    if not attrib.startswith(ATTR_START):\n",
+    "        raise AttributeError('Attribute \"%s\" not starting with \"%s\"' %\n",
+    "                            (attrib, ATTR_START))\n",
+    "    attrib = attrib[len(ATTR_START):]\n",
+    "    collection_index = value.find('collection_index').text\n",
+    "    text = value.find('text').text\n",
+    "    value_type = value.find('value_type').text\n",
+    "    unit = value.find('unit').text\n",
+    "    option_node = value.find('option')\n",
+    "    if XML_URI in option_node.attrib:\n",
+    "        option = option_node.attrib[XML_URI]\n",
+    "        # find the last part of the option\n",
+    "        option = option.split('/')[-1]\n",
+    "    else:\n",
+    "        option = None\n",
+    "    updated = value.find('updated').text\n",
+    "    new_val = {\n",
+    "        'text': text,\n",
+    "        'value_type': value_type,\n",
+    "        'unit': unit,\n",
+    "        'option': option,\n",
+    "        'updated': updated\n",
+    "    }\n",
+    "    if attrib not in rdmo:\n",
+    "        rdmo[attrib] = {}\n",
+    "    index = int(index)\n",
+    "    collection_index = int(collection_index)\n",
+    "    if index not in rdmo[attrib]:\n",
+    "        rdmo[attrib][index] = {}\n",
+    "    rdmo[attrib][index][collection_index] = new_val\n",
+    "    # update last modification date\n",
+    "    if updated > max_updated:\n",
+    "        max_updated = updated\n",
+    "rdmo['updated'] = max_updated"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"dmp\": {\"title\": \"Second test project\", \"description\": null, \"created\": \"2019-06-29T09:30:43.529158+02:00\", \"modified\": \"2019-06-29T09:30:43.529172+02:00\"}}\n"
+      "{0, 1}\n"
      ]
     }
    ],
    "source": [
-    "print(json.dumps(madmp))"
+    "# find the indexes of datasets used in the DMP\n",
+    "datasets = set()\n",
+    "for key in rdmo:\n",
+    "    if key.startswith('/dataset/'):\n",
+    "        datasets |= rdmo[key].keys()\n",
+    "print(datasets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# helper function to access the elements and return None if not here\n",
+    "def get_val(d, *args):\n",
+    "    pos = d\n",
+    "    for k in args:\n",
+    "        if not isinstance(pos, dict):\n",
+    "            return None\n",
+    "        if k not in pos:\n",
+    "            return None\n",
+    "        pos = pos[k]\n",
+    "    return pos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# construct maDMP ready to be serialized as JSON\n",
+    "maDMP = {}\n",
+    "maDMP['title'] = rdmo['title']\n",
+    "if rdmo['description'] is not None:\n",
+    "    maDMP['description'] = rdmo['description'] \n",
+    "# TODO: no language in the RDMO data model?\n",
+    "maDMP['language'] = 'en'\n",
+    "maDMP['created'] = rdmo['created']\n",
+    "maDMP['modified'] = rdmo['updated']\n",
+    "# TODO: check for ethical issues (loop through sensitive data)\n",
+    "# extract email from name / email field\n",
+    "name_email = rdmo['/coordination/name'][0][0]['text']\n",
+    "words = name_email.split()\n",
+    "name = (' ').join([w for w in words if '@' not in w])\n",
+    "email = (', ').join([w for w in words if '@' in w])\n",
+    "maDMP['contact'] = {'name': name, 'mbox': email}\n",
+    "maDMP['dataset'] = []\n",
+    "# for each dataset create an entry\n",
+    "for i in datasets:\n",
+    "    title = get_val(rdmo, '/dataset/id', i, 0, 'text')\n",
+    "    description = get_val(rdmo, '/dataset/description', i, 0, 'text')\n",
+    "    dataset_type = get_val(rdmo, '/dataset/format', i, 0, 'text')\n",
+    "    qa = get_val(rdmo, '/dataset/quality_assurance', i, 0, 'text')\n",
+    "    dataset = {'title': title, 'type': dataset_type}\n",
+    "    # TODO: find if personal / sensitive data is in data set\n",
+    "    # TODO: find preservation statement\n",
+    "    if description is not None:\n",
+    "        dataset['description'] = description\n",
+    "    if qa is not None:\n",
+    "        dataset['dataQualityAssurance'] = qa\n",
+    "    # append dataset to list of datasets\n",
+    "    maDMP['dataset'].append(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"title\": \"Second test project\",\n",
+      "    \"language\": \"en\",\n",
+      "    \"created\": \"2019-06-29T09:30:43.529158+02:00\",\n",
+      "    \"modified\": \"2019-06-30T11:01:54.837899+02:00\",\n",
+      "    \"contact\": {\n",
+      "        \"name\": \"Helmuth Breitenfellner\",\n",
+      "        \"mbox\": \"helmuth.breitenfellner@student.tuwien.ac.at\"\n",
+      "    },\n",
+      "    \"dataset\": [\n",
+      "        {\n",
+      "            \"title\": \"Test\",\n",
+      "            \"type\": \"CSV\",\n",
+      "            \"description\": \"CSV files of marriages and wheat combined\",\n",
+      "            \"dataQualityAssurance\": \"ISO9001 will be implemented\"\n",
+      "        },\n",
+      "        {\n",
+      "            \"title\": \"Test2\",\n",
+      "            \"type\": null\n",
+      "        }\n",
+      "    ]\n",
+      "}\n",
+      "{\n",
+      "    \"title\": \"Second test project\",\n",
+      "    \"description\": null,\n",
+      "    \"created\": \"2019-06-29T09:30:43.529158+02:00\",\n",
+      "    \"/coordination/name\": {\n",
+      "        \"0\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": \"Helmuth Breitenfellner\\nhelmuth.breitenfellner@student.tuwien.ac.at\",\n",
+      "                \"value_type\": \"text\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-30T10:58:51.962811+02:00\"\n",
+      "            }\n",
+      "        }\n",
+      "    },\n",
+      "    \"/dataset/creation_methods\": {\n",
+      "        \"0\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": \"An R-script is used to automatically generate the data.\",\n",
+      "                \"value_type\": \"text\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-30T11:00:12.377365+02:00\"\n",
+      "            }\n",
+      "        },\n",
+      "        \"1\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": \"This is data which is taken from the Internet\",\n",
+      "                \"value_type\": \"text\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-30T11:00:12.381032+02:00\"\n",
+      "            }\n",
+      "        }\n",
+      "    },\n",
+      "    \"/dataset/description\": {\n",
+      "        \"0\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": \"CSV files of marriages and wheat combined\",\n",
+      "                \"value_type\": \"text\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-30T10:59:38.586335+02:00\"\n",
+      "            }\n",
+      "        }\n",
+      "    },\n",
+      "    \"/dataset/format\": {\n",
+      "        \"0\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": \"CSV\",\n",
+      "                \"value_type\": \"text\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-30T10:59:38.587487+02:00\"\n",
+      "            }\n",
+      "        }\n",
+      "    },\n",
+      "    \"/dataset/id\": {\n",
+      "        \"0\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": \"Test\",\n",
+      "                \"value_type\": \"text\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-29T10:23:23.312664+02:00\"\n",
+      "            }\n",
+      "        },\n",
+      "        \"1\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": \"Test2\",\n",
+      "                \"value_type\": \"text\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-30T11:00:02.388004+02:00\"\n",
+      "            }\n",
+      "        }\n",
+      "    },\n",
+      "    \"/dataset/interoperability\": {\n",
+      "        \"0\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": null,\n",
+      "                \"value_type\": \"option\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": \"yes\",\n",
+      "                \"updated\": \"2019-06-30T11:01:45.486512+02:00\"\n",
+      "            }\n",
+      "        },\n",
+      "        \"1\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": null,\n",
+      "                \"value_type\": \"option\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": \"yes\",\n",
+      "                \"updated\": \"2019-06-30T11:01:45.487817+02:00\"\n",
+      "            }\n",
+      "        }\n",
+      "    },\n",
+      "    \"/dataset/metadata\": {\n",
+      "        \"0\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": \"Metadata to interpret the data\",\n",
+      "                \"value_type\": \"text\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-30T11:01:45.484570+02:00\"\n",
+      "            }\n",
+      "        },\n",
+      "        \"1\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": \"Metadata to interpret the data\",\n",
+      "                \"value_type\": \"text\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-30T11:01:45.482387+02:00\"\n",
+      "            }\n",
+      "        }\n",
+      "    },\n",
+      "    \"/dataset/metadata/standards\": {\n",
+      "        \"0\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": null,\n",
+      "                \"value_type\": \"text\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-30T11:01:03.919706+02:00\"\n",
+      "            }\n",
+      "        },\n",
+      "        \"1\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": null,\n",
+      "                \"value_type\": \"text\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-30T11:01:03.920785+02:00\"\n",
+      "            }\n",
+      "        }\n",
+      "    },\n",
+      "    \"/dataset/quality_assurance\": {\n",
+      "        \"0\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": \"ISO9001 will be implemented\",\n",
+      "                \"value_type\": \"text\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-30T11:01:54.837899+02:00\"\n",
+      "            }\n",
+      "        }\n",
+      "    },\n",
+      "    \"/dataset/reuse_scenario\": {\n",
+      "        \"0\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": \"Everyone interested in wheat and marriages\",\n",
+      "                \"value_type\": \"text\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-30T11:00:59.775268+02:00\"\n",
+      "            }\n",
+      "        },\n",
+      "        \"1\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": \"N/A\",\n",
+      "                \"value_type\": \"text\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-30T11:00:59.777432+02:00\"\n",
+      "            }\n",
+      "        }\n",
+      "    },\n",
+      "    \"/dataset/sharing/conditions\": {\n",
+      "        \"0\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": null,\n",
+      "                \"value_type\": \"text\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-29T11:58:31.007790+02:00\"\n",
+      "            }\n",
+      "        }\n",
+      "    },\n",
+      "    \"/dataset/sharing/sharing_license\": {\n",
+      "        \"0\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": null,\n",
+      "                \"value_type\": \"text\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-29T11:58:31.011122+02:00\"\n",
+      "            }\n",
+      "        }\n",
+      "    },\n",
+      "    \"/dataset/size/number_files\": {\n",
+      "        \"0\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": \"1\",\n",
+      "                \"value_type\": \"integer\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-30T10:59:38.592033+02:00\"\n",
+      "            }\n",
+      "        }\n",
+      "    },\n",
+      "    \"/dataset/size/volume\": {\n",
+      "        \"0\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": \"0.01\",\n",
+      "                \"value_type\": \"float\",\n",
+      "                \"unit\": \"GB\",\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-30T10:59:38.591915+02:00\"\n",
+      "            }\n",
+      "        }\n",
+      "    },\n",
+      "    \"/dataset/structure\": {\n",
+      "        \"0\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": \"In folders\",\n",
+      "                \"value_type\": \"text\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-30T11:00:38.122426+02:00\"\n",
+      "            }\n",
+      "        },\n",
+      "        \"1\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": \"Also in folders\",\n",
+      "                \"value_type\": \"text\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-30T11:00:38.130227+02:00\"\n",
+      "            }\n",
+      "        }\n",
+      "    },\n",
+      "    \"/dataset/versioning_strategy\": {\n",
+      "        \"0\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": \"Not at all\",\n",
+      "                \"value_type\": \"text\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-30T11:00:38.126156+02:00\"\n",
+      "            }\n",
+      "        },\n",
+      "        \"1\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": \"No need for versioning\",\n",
+      "                \"value_type\": \"text\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-30T11:00:38.115969+02:00\"\n",
+      "            }\n",
+      "        }\n",
+      "    },\n",
+      "    \"/legal_aspects/sensitive_data/other/yesno\": {\n",
+      "        \"0\": {\n",
+      "            \"0\": {\n",
+      "                \"text\": \"1\",\n",
+      "                \"value_type\": \"boolean\",\n",
+      "                \"unit\": null,\n",
+      "                \"option\": null,\n",
+      "                \"updated\": \"2019-06-29T11:58:31.010381+02:00\"\n",
+      "            }\n",
+      "        }\n",
+      "    },\n",
+      "    \"updated\": \"2019-06-30T11:01:54.837899+02:00\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(json.dumps(maDMP, indent=4))\n",
+    "print(json.dumps(rdmo, indent=4))"
    ]
   },
   {
